# FeatherCore

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  build_tool.rs
boot/: BUILD.md  Cargo.toml  README.md
boot/docs/: BOOT.md
build_tool/docs/: DEVICE_TREE_PARSER.md
build_tool/src/: build.rs  device_tree.rs  main.rs
common/: COMMON_LIB_COMPLETION_REPORT.md  Cargo.toml
common/arch/: ARCH_COMPLETION_REPORT.md
common/arch/arm/: Cargo.toml  a_profile.rs  link.x.in  m_profile.rs  mod.rs
common/arch/docs/: ARCHITECTURE.md  架构说明.md
common/arch/riscv/: link.x.in  mod.rs
common/arch/src/: lib.rs
common/docs/: MMU_DESIGN.md  MMU_IMPLEMENTATION.md
common/driver/: gpio.rs  i2c.rs  serial.rs
common/driver/gpio/: config.rs  error.rs  mod.rs  traits.rs
common/driver/i2c/: config.rs  error.rs  mod.rs  traits.rs
common/driver/i2s/: mod.rs
common/driver/serial/: config.rs  error.rs  mod.rs  traits.rs
common/driver/spi/: mod.rs
common/driver/timer/: mod.rs
common/platform/: Cargo.toml
common/platform/src/: lib.rs
common/src/: devicetree.rs  lib.rs
common/src/driver/: led.rs
common/sys/: Cargo.toml
docs/: APPS_GRAPHICS_OVERVIEW_ZH.md  ARCHITECTURE.md  ARCHITECTURE_FIX.md  ARCHITECTURE_SUMMARY.md  CARGO_STRUCTURE.md  COMMON_REFACTORING_COMPLETE.md  COMMON_STRUCTURE.md  COMMON_STRUCTURE_CORRECTED.md  DESIGN.md  EK_RA8P1_PORTING.md  ESP_HOSTED_NG_C5_H7S7_PORTING.md  FEATHER_RENDER_CORE_DECISION_ZH.md  FINAL_ARCHITECTURE.md  FRENDER_IMPLEMENTATION_ZH.md  IMPLEMENTATION_SUMMARY.md  NUTTX_GIT_WORKFLOW.md  NUTTX_GRAPHICS_OVERVIEW_ZH.md  PINION_IMPLEMENTATION_ZH.md  PROJECT_STRUCTURE.md  README.md  README_ZH.md  REFACTORING_PLAN.md  ROOTFS_EXPLANATION.md  STM32H7S78_DK_PORTING.md  STM32N6570_DK_PORTING.md  STM32U5X9J_DK_PORTING.md  STM32_GPU2D_NEMAP_PORTING_RESULT.md  WIFI_HWSIM_ARCHITECTURE.md  WIFI_HWSIM_FULL_VALIDATION_MATRIX.md  WIFI_HWSIM_MANUAL_RECIPES.md  WIFI_HWSIM_PORTING_PROGRESS.md  WIFI_LINUX_STACK_PORTING_DETAILS.md  WING_GUI_AND_DESKTOP_ARCHITECTURE_ZH.md  WING_GUI_DESIGN_REFERENCES_ZH.md  WING_IMPLEMENTATION_ZH.md  架构整理完成报告.md  通用BOOT架构设计.md
docs/plans/: FEATHER_GRAPHICS_PROGRESS_AND_PLAN_ZH.md  WING_GUI_CORE_DESIGN_ROADMAP_ZH.md  WING_GUI_PHASE1_ACCEPTANCE_ZH.md  WING_GUI_PROGRESS_AND_PLAN_ZH.md  WING_GUI_STRUCTURE_BOUNDARY_ZH.md
docs/progress/: GRAPHICS_ROADMAP_AND_PROGRESS_ZH.md  README_ZH.md  WING_GUI_IMPLEMENTATION_PROGRESS_AND_PLAN_ZH.md  WING_GUI_PROGRESS_AND_UPDATE_PLAN_ZH.md
kernel/docs/: RUST_ASYNC_PROCESS_THREAD.md
kernel/src/: lib.rs
kernel/src/driver/: mod.rs
kernel/src/syscall/: mod.rs
kernel/src/vfs/: mod.rs
platform/: ARCHITECTURE.md  Cargo.toml
platform/board/: Cargo.toml
platform/board/esp/esp32-c3-devkitc/: esp32-c3-devkitc_defconfig.toml  mod.rs
platform/board/esp/esp32-c5-devkitc/: esp32-c5-devkitc_defconfig.toml  mod.rs
platform/board/esp/esp32-c6-devkitm/: esp32-c6-devkitm_defconfig.toml  mod.rs
platform/board/nxp/frdm-rw612/: frdm-rw612_defconfig.toml  mod.rs
platform/board/nxp/mimxrt1170-evkb/: mimxrt1170-evkb_defconfig.toml  mod.rs
platform/board/renesas/ek-ra8p1/: ek-ra8p1.dts  ek-ra8p1_defconfig.toml  mod.rs
platform/board/src/: lib.rs
platform/board/stm32/stm32f429i-disc/: mod.rs
platform/board/stm32/stm32h7s78-dk/: mod.rs  stm32h7s78-dk_defconfig.toml
platform/board/stm32/stm32n6570-dk/: mod.rs  stm32n6570-dk_defconfig.toml
platform/board/stm32/stm32u5a9j-dk/: mod.rs  stm32u5a9j-dk_defconfig.toml
platform/board/stm32/stm32u5g9j-dk1/: mod.rs  stm32u5g9j-dk1_defconfig.toml
platform/chip/: Cargo.toml
platform/chip/esp/esp32c3/: mod.rs
platform/chip/esp/esp32c5/: mod.rs
platform/chip/esp/esp32c6/: mod.rs
platform/chip/nxp/imxrt1170/: imxrt1170_defconfig.toml  mod.rs
platform/chip/nxp/rw612/: mod.rs  rw612_defconfig.toml
platform/chip/renesas/ra8/: mod.rs  ra8_defconfig.toml
platform/chip/src/: lib.rs
platform/chip/stm32/stm32f4/: mod.rs
platform/chip/stm32/stm32h7rs/: mod.rs  stm32h7rs_defconfig.toml
platform/chip/stm32/stm32n6/: mod.rs  stm32n6_defconfig.toml
platform/chip/stm32/stm32u5/: adc.rs  adf.rs  aes.rs  can.rs  comp.rs  cordic.rs  crc.rs  dac.rs  dbg.rs  dcache.rs  dcmi.rs  des.rs  dma.rs  dsi.rs  exti.rs  fdcan.rs  flash.rs  fmac.rs  fmc.rs  gfxtim.rs  gpdma.rs  gpio.rs  gtzc.rs  hash.rs  hrtim.rs  i2c.rs  i3c.rs  irtim.rs  iwdg.rs  jpeg.rs  lptim.rs  ltdc.rs  map.rs  mdf.rs  mod.rs  nvic.rs  octospi.rs  octospim.rs  opamp.rs  otg_hs.rs  (+23 more)
platform/chip/stm32/stm32u5-17-30/: dma2d.rs  fmac.rs  gfxmmu.rs  gpdma.rs  hspi.rs  lpdma.rs  octospim.rs
platform/chip/stm32/stm32u5-31-45/: adc12.rs  adf.rs  dcmi.rs  ltdc.rs  opamp.rs  pssi.rs  sdmmc.rs
platform/chip/stm32/stm32u5-46-60/: hash.rs  otfdec.rs  pka.rs  rng.rs  saes.rs  tim1_8.rs  tsc.rs
platform/chip/stm32/stm32u5-5-15/: crs.rs  ramcfg.rs
platform/chip/stm32/stm32u5-61-75/: i2c.rs
platform/chip/stm32u5old/: adc4.rs  aes.rs  comp.rs  dcmi.rs  dlyb.rs  exti.rs  flash.rs  fmc.rs  gfxmmu.rs  gpu2d.rs  hash.rs  hspi.rs  icache.rs  iwdg.rs  lpdma.rs  lpgpio.rs  lptim.rs  lpuart.rs  map.rs  mdf.rs  mod.rs  octospi.rs  opamp.rs  otfdec.rs  otg_fs.rs  pka.rs  rtc.rs  sai.rs  tim1_8.rs  tim_15_16_17.rs  tim_2_3_4_5.rs  tim_6_7.rs  ucpd.rs  vrefbuf.rs  wwdg.rs
platform/src/: lib.rs
rootfs/: Cargo.toml  init
rootfs/etc/: group  profile  rc.local
rootfs/src/coreutils/: cat.rs  cd.rs  cp.rs  echo.rs  ls.rs  mkdir.rs  mount.rs  mv.rs  ps.rs  pwd.rs  rm.rs
rootfs/src/shell/: main.rs
tools/: README.md
tools/firmware/ek-ra8p1/: build-knsh.sh  build-nsh.sh
tools/firmware/sim/: bt-hwsim.md  build-ap.sh  build-ap1.sh  build-ap2.sh  build-ble1-hcicore-probe.sh  build-ble1-hcisock-probe.sh  build-ble1.sh  build-ble2.sh  build-bt1.sh  build-bt2.sh  build-dynps-ap.sh  build-dynps-sta1.sh  build-fgfx.sh  build-hwsim-role.sh  build-lvgl.sh  build-nsh.sh  build-p2p1.sh  build-p2p2.sh  build-sta1.sh  build-sta2.sh  build-sta3.sh  build-wing.sh  hostapd-a.conf  hostapd-ac-vht160.conf  hostapd-ac-vht80.conf  hostapd-ac-vht80p80.conf  hostapd-ac.conf  hostapd-ampdu.conf  hostapd-ax-6g-open.conf  (+113 more)
(+54 files in other folders)
