[package]
name = "feathercore-rootfs"
version = "0.1.0"
edition = "2021"
description = "FeatherCore OS root filesystem utilities"
authors = ["FeatherCore Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
feathercore-common = { path = "../common" }
feathercore-kernel = { path = "../kernel" }

[features]
default = ["shell", "coreutils"]
shell = []
coreutils = []

[[bin]]
name = "sh"
path = "src/shell/main.rs"
required-features = ["shell"]

[[bin]]
name = "ls"
path = "src/coreutils/ls.rs"
required-features = ["coreutils"]

[[bin]]
name = "cat"
path = "src/coreutils/cat.rs"
required-features = ["coreutils"]

[[bin]]
name = "echo"
path = "src/coreutils/echo.rs"
required-features = ["coreutils"]

[[bin]]
name = "cd"
path = "src/coreutils/cd.rs"
required-features = ["coreutils"]

[[bin]]
name = "pwd"
path = "src/coreutils/pwd.rs"
required-features = ["coreutils"]

[[bin]]
name = "mkdir"
path = "src/coreutils/mkdir.rs"
required-features = ["coreutils"]

[[bin]]
name = "rm"
path = "src/coreutils/rm.rs"
required-features = ["coreutils"]

[[bin]]
name = "cp"
path = "src/coreutils/cp.rs"
required-features = ["coreutils"]

[[bin]]
name = "mv"
path = "src/coreutils/mv.rs"
required-features = ["coreutils"]

[[bin]]
name = "ps"
path = "src/coreutils/ps.rs"
required-features = ["coreutils"]

[[bin]]
name = "mount"
path = "src/coreutils/mount.rs"
required-features = ["coreutils"]
