[package]
name = "feathercore-platform"
version = "0.1.0"
edition = "2021"
description = "FeatherCore platform adapter layer"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
feathercore-common = { path = ".." }

# Platform workspace (select board/chip via features)
feathercore-platform-board = { path = "../../platform/board", optional = true }
feathercore-platform-chip = { path = "../../platform/chip", optional = true }

[features]
default = []

# Board features (automatically include corresponding chip)
stm32f429i-disc = [
    "feathercore-platform-board/stm32f429i-disc",
    "feathercore-platform-chip/chip-stm32f4"
]
stm32h7s78-dk = [
    "feathercore-platform-board/stm32h7s78-dk",
    "feathercore-platform-chip/chip-stm32h7rs"
]
stm32n6570-dk = [
    "feathercore-platform-board/stm32n6570-dk",
    "feathercore-platform-chip/chip-stm32n6"
]
stm32u5a9j-dk = [
    "feathercore-platform-board/stm32u5a9j-dk",
    "feathercore-platform-chip/chip-stm32u5"
]
stm32u5g9j-dk1 = [
    "feathercore-platform-board/stm32u5g9j-dk1",
    "feathercore-platform-chip/chip-stm32u5"
]

mimxrt1170-evkb = [
    "feathercore-platform-board/mimxrt1170-evkb",
    "feathercore-platform-chip/chip-imxrt1170"
]
frdm-rw612 = [
    "feathercore-platform-board/frdm-rw612",
    "feathercore-platform-chip/chip-rw612"
]

esp32-c3-devkitc = [
    "feathercore-platform-board/esp32-c3-devkitc",
    "feathercore-platform-chip/chip-esp32c3"
]
esp32-c5-devkitc = [
    "feathercore-platform-board/esp32-c5-devkitc",
    "feathercore-platform-chip/chip-esp32c5"
]
esp32-c6-devkitm = [
    "feathercore-platform-board/esp32-c6-devkitm",
    "feathercore-platform-chip/chip-esp32c6"
]

ek-ra8p1 = [
    "feathercore-platform-board/ek-ra8p1",
    "feathercore-platform-chip/chip-ra8"
]

# Chip-only features
chip-stm32f4 = ["feathercore-platform-chip/chip-stm32f4"]
chip-stm32h7rs = ["feathercore-platform-chip/chip-stm32h7rs"]
chip-stm32n6 = ["feathercore-platform-chip/chip-stm32n6"]
chip-stm32u5 = ["feathercore-platform-chip/chip-stm32u5"]
chip-imxrt1170 = ["feathercore-platform-chip/chip-imxrt1170"]
chip-rw612 = ["feathercore-platform-chip/chip-rw612"]
chip-esp32c3 = ["feathercore-platform-chip/chip-esp32c3"]
chip-esp32c5 = ["feathercore-platform-chip/chip-esp32c5"]
chip-esp32c6 = ["feathercore-platform-chip/chip-esp32c6"]
chip-ra8 = ["feathercore-platform-chip/chip-ra8"]
