[package]
name = "feathercore-sys"
version = "0.1.0"
edition = "2021"
authors = ["FeatherCore Contributors"]
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = []

# System modules
sys_clock = []
sys_memory = []
sys_interrupt = []
sys_cpu = []

# MMU support
no_mmu = []
with_mmu = []

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
