[package]
name = "feathercore-platform-board"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FeatherCore board support packages"

[lib]
path = "src/lib.rs"

[dependencies]

[features]
default = []

# STM32 boards
stm32f429i-disc = []
stm32h7s78-dk = []
stm32n6570-dk = []
stm32u5a9j-dk = []
stm32u5g9j-dk1 = []

# NXP boards
mimxrt1170-evkb = []
frdm-rw612 = []

# ESP boards
esp32-c3-devkitc = []
esp32-c5-devkitc = []
esp32-c6-devkitm = []

# Renesas boards
ek-ra8p1 = []
