[package]
name = "feathercore-platform-chip"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FeatherCore chip support packages"

[lib]
path = "src/lib.rs"

[dependencies]

[features]
default = []

# STM32 chips
chip-stm32f4 = []
chip-stm32h7rs = []
chip-stm32n6 = []
chip-stm32u5 = []

# NXP chips
chip-imxrt1170 = []
chip-rw612 = []

# ESP chips
chip-esp32c3 = []
chip-esp32c5 = []
chip-esp32c6 = []

# Renesas chips
chip-ra8 = []
